// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Packages config should configure the import/no-nested-imports rule 1`] = `
Array [
  "error",
  Object {
    "dirs": Array [
      "src/common",
      "src/controllers",
      "src/services",
      "src/ui",
    ],
    "message": "For more details see #guidelines#/architecture/general/apps/",
  },
]
`;

exports[`Packages config should configure the import/no-parent-imports rule 1`] = `
Array [
  "error",
  Object {
    "dirs": Array [
      "src/ui",
    ],
    "message": "For more details see #guidelines#/architecture/general/components/components-types/ui/",
  },
]
`;

exports[`Packages config should configure the import/no-restricted-paths rule 1`] = `
Array [
  "error",
  Object {
    "message": "For more details see #guidelines#/architecture/general/apps/",
    "restrictions": Array [
      Object {
        "from": Array [
          "src/controllers",
          "src/ui",
        ],
        "target": "src/services",
      },
      Object {
        "from": Array [
          "src/services",
          "src/ui",
        ],
        "target": "src/controllers",
      },
      Object {
        "from": Array [
          "src/services",
          "src/controllers",
          "src/ui",
        ],
        "target": "src/common",
      },
    ],
  },
]
`;
